@@ -11,8 +11,8 @@ BASE_SERVER_IP =
 BASE_SERVER_PUBLIC_IP =
 BASE_SERVER_VHOST =
 BASE_SERVER_VHOST_PREFIX = http://
-BASE_SERVER_VHOST_HTTP_PORT = 8080
-BASE_SERVER_VHOST_HTTPS_PORT = 4443
+BASE_SERVER_VHOST_HTTP_PORT =
+BASE_SERVER_VHOST_HTTPS_PORT =
 PANEL_SSL_ENABLED =
 SERVICES_SSL_ENABLED =
 DEFAULT_ADMIN_ADDRESS =
