@@ -196,7 +196,7 @@ sub showUsage
 
 our $reconfigurationItems = [
 	'all', 'servers', 'httpd', 'mta', 'mailfilters', 'po', 'ftpd', 'named', 'sql', 'hostnames', 'system_hostname',
-	'panel_hostname', 'ips', 'admin', 'php', 'panel_ssl', 'services_ssl', 'ssl', 'backup', 'webstats',
+	'panel_hostname', 'panel_ports', 'ips', 'admin', 'php', 'panel_ssl', 'services_ssl', 'ssl', 'backup', 'webstats',
 	'sqlmanager', 'webmails', 'filemanager', 'antirootkits'
 ];
 
