@@ -4,6 +4,12 @@
 Git 1.2.x
 ------------------------------------------------------------------------------------------------------------------------
 
+INSTALLER
+	Added: panel_ports item for the --reconfigure command line option
+
+PACKAGE
+	Added: Ports dialog ( FrontEnd package )
+
 ------------------------------------------------------------------------------------------------------------------------
 1.2.1
 ------------------------------------------------------------------------------------------------------------------------
